@@ -134,6 +134,8 @@ Core and builtins
 Extension Modules
 -----------------
 
+- Bug #1563759: struct.unpack doens't support buffer protocol objects
+
 - Bug #1686475: Support stat'ing open files on Windows again.
 
 - Bug #1647541: Array module's buffer interface can now handle empty arrays.
